<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DecideActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/android"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/session"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-light"
        android:layout_gravity="center"
        android:layout_weight="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="20sp"
        android:text="@string/description"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="20sp"
        android:text="@string/date"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:textSize="20sp"
        android:text="@string/timeLeft"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/y"
            android:id="@+id/yes"
            android:backgroundTint="@color/charcoal"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/no"
            android:text="@string/n"
            android:backgroundTint="@color/charcoal"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/abstrain"
            android:text="@string/a"
            android:backgroundTint="@color/charcoal"
            />
    </LinearLayout>

</LinearLayout>