<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultsActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/votedY"
        android:textColor="@color/dGreen"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"

      />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/votedN"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/votedA"
        android:textColor="@color/charcoal"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

</LinearLayout>