<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/describe"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed-light"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/android"
        android:layout_gravity="center"
        />

    //-------------------------------------------------------------------------
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/username"
            android:gravity="center"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/enterUsername"
            android:layout_marginEnd="20dp"
            />

    </LinearLayout>
    //-------------------------------------------------------------------------
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/index_number"
            android:gravity="center"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:id="@+id/enterIndex"
            />

    </LinearLayout>
    //-------------------------------------------------------------------------
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/name"
            android:gravity="center"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:id="@+id/enterName"
            />

    </LinearLayout>
    //-------------------------------------------------------------------------
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/password"
            android:gravity="center"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword"
            android:id="@+id/enterPassword"
            />

    </LinearLayout>
    //-------------------------------------------------------------------------

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/green"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>
</LinearLayout>